--- a/Node Js/form.html
+++ b/Node Js/form.html
@@ -9,9 +9,9 @@
 
 <body>
     <form action="/submit" method="post">
-        <input type="text" name="username" placeholder="Enter Username" />
+        <input type="text" name="name" placeholder="Enter Username" />
         <br /> 
-        <input type="email" name="password" placeholder="Enter Email" /><br />
+        <input type="email" name="email" placeholder="Enter Email" /><br />
         <input type="submit" value="Submit" />
     </form>
 </body>
